[tool.poetry]
name = "spotify-saver"
version = "0.1.0"
description = ""
authors = ["Silvano Cerza <silvanocerza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
spotipy = "^2.4"


[tool.poetry.dev-dependencies]
ipdb = "^0.12.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
